Remove broken links

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -101,7 +101,7 @@ const description = "This is the official registry for the ISO 24229 standard.";
         </menu>
 
         <div class="official-affiliation-notice">
-          <h3>Legal</h3>
+          <!-- <h3>Legal</h3> -->
           <div class="logo-iso">
             <a href="https://www.iso.org" target="_blank"><img class="logo-iso" src="/iso-logo-black.svg" /></a>
           </div>
@@ -113,18 +113,18 @@ const description = "This is the official registry for the ISO 24229 standard.";
           <div class="working-group-text">
             <a href="https://www.iso.org" target="_blank">ISO</a> / <a href="https://www.iso.org/committee/48750.html" target="_blank">TC 46</a> / WG 3
           </div>
-          <menu>
-            <li>
-              <a href="/privacy">
-                Privacy Policy
-              </a>
-            </li>
-            <li>
-              <a href="/tos">
-                Terms of Service
-              </a>
-            </li>
-          </menu>
+          <!-- <menu> -->
+          <!--   <li> -->
+          <!--     <a href="/privacy"> -->
+          <!--       Privacy Policy -->
+          <!--     </a> -->
+          <!--   </li> -->
+          <!--   <li> -->
+          <!--     <a href="/tos"> -->
+          <!--       Terms of Service -->
+          <!--     </a> -->
+          <!--   </li> -->
+          <!-- </menu> -->
         </div>
       </div>
     </footer>
