Add link to Interscript

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -92,10 +92,15 @@ const description = "This is the official registry for the ISO 24229 standard.";
         </div>
 
         <menu class="social-links">
-          <h3>Social</h3>
+          <h3>Links</h3>
           <li>
             <a href="https://twitter.com/isostandards" target="_blank">
               𝕏.com
+            </a>
+          </li>
+          <li>
+            <a href="https://interscript.org" target="_blank">
+              Interscript
             </a>
           </li>
         </menu>
