--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -346,8 +346,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-wrapper {
-  h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6, p {
     padding-bottom: 1rem;
+  }
+
+  * + h1, * + h2, * + h3, * + h4, * + h5, * + h6, * + p {
+    padding-top: 1rem;
   }
 
   p {
