--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,16 +7,16 @@ const githubUsername = import.meta.env.HOSTNAME || import.meta.env.PUBLIC_HI || 
 ---
 
 <Layout title="Home">
-		<p class="instructions">
-    hello
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-        href="/test"
-				title="Test"
-				body="Learn how Astro worksdfs and explore the official API docs."
-			/>
-		</ul>
+  <p class="instructions">
+    This is the official registry for the <a href="https://www.iso.org/standard/78143.html" target="_blank">ISO 24229 standard</a>.
+  </p>
+  <ul role="list" class="link-card-grid">
+    <Card
+      href="/registry"
+      title="Go to Registry"
+      body="View the registry data"
+    />
+  </ul>
 </Layout>
 
 <style>
