--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const description = "This is the official registry for the ISO 24229 standard.";
         <h1>
           <a href="/" title="Back to home">
             <div class="logo-iso">
-              <img class="logo-iso" src="/iso-logo-blue-9,78,156.svg" />
+              <img class="logo-iso" src="/assets/logos/iso-logo-blue-9,78,156.svg" />
             </div>
             <div class="title-text">
               ISO 24229 <span class="text-gradient">Registry</span>
@@ -61,13 +61,19 @@ const description = "This is the official registry for the ISO 24229 standard.";
         <div class="source-code">
           <h3>Source code</h3>
           <menu>
-            <li>
+            <li class="github link">
               <a href="https://github.com/iso24229/iso24229.github.io" target="_blank">
+                <div class="icon-social">
+                  <img src="/assets/icons/github.svg" />
+                </div>
                 This website
               </a>
             </li>
-            <li>
+            <li class="github link">
               <a href="https://github.com/iso24229/iso24229-registry" target="_blank">
+              <div class="icon-social">
+                <img src="/assets/icons/github.svg" />
+              </div>
                 Registry data
               </a>
             </li>
@@ -108,7 +114,7 @@ const description = "This is the official registry for the ISO 24229 standard.";
         <div class="official-affiliation-notice">
           <!-- <h3>Legal</h3> -->
           <div class="logo-iso">
-            <a href="https://www.iso.org" target="_blank"><img class="logo-iso" src="/iso-logo-black.svg" /></a>
+            <a href="https://www.iso.org" target="_blank"><img class="logo-iso" src="/assets/logos/iso-logo-black.svg" /></a>
           </div>
           <div class="copyright-notice">
             <div>
@@ -316,6 +322,14 @@ footer {
   h3 {
     padding-bottom: 0.2rem;
   }
+
+  .icon-social {
+    display: inline-block;
+    background: url("/assets/icons/github.svg");
+    width: 1rem;
+    height: 1rem;
+    vertical-align: sub;
+  }
 }
 
 .logo-iso {
@@ -428,7 +442,7 @@ and (max-width: 710px) {
 
   .footer-wrapper {
     display: grid;
-    gap: 1rem;
+    gap: 2.5rem;
   }
 }
 
