--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const { currentPage } = Astro.props;
 <header>
   <div class="header-wrapper">
     <h1>
-      <a href="/" title="Back to home">
+      <a href="/" rel="prefetch-intent" title="Back to home">
         <div class="logo-iso">
           <img class="logo-iso" src="/assets/logos/iso-logo-blue-9,78,156.svg" />
         </div>
