--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Main from "../components/Main.astro";
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
 	title: string;
@@ -32,6 +33,7 @@ const description = "This is the official registry for the ISO 24229 standard.";
     <meta name="robots" content="none" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
   <body class={classes ?? ""}>
     <Header/>
